 * Fixed some problems with BASIC_AUTH.
 * Fixed problems with documentation links.
 * Modified accounts so that protected accounts are not accessible by the user.
 * Modified report page formating.
 * Modified file size reports to show up as bytes.
 * Modified email string padding and line separation characters.
 * Modified account page to show default and current project access levels.
 * Added Hungarian translation.
 * Added g_bug_link_tag to let users customize how to create bug links.
 * Added a "jump to bugnotes" quicklink at the top of the view bug pages.
 * Added a global option to control what access levels can delete bugs.
 * Removed access_min and access threshold concepts from the user and project management.

03.15.2002  -   0.17.1

 * Fixed missing closing span tag in view_bug_*page.php.
 * Fixed advanced summaries (jpgraph) for general statistics for all projects.
 * Fixed small problem in all localization files (for $s_reset_request_msg).
 * Fixed summary stats for developers when they are assigned with "developer" rights at a project and do not have default profile >="developer".
 * Fixed reporter poplist filter in buglist when users are assigned >="reporter" at a project and do not have default profile >="reporter".
 * Fixed summary page for "All projects" option
 * Fixed printable buglist for "All projects" option
 * Fixed document links (ChangeLog, README, etc.)
 * Fixed problem where portuguese_brazil localization did not appear correctly.
 * Fixed several minor CSS class consistency issues.
 * Fixed file download links to use rawurlencode().
 * Fixed admin_check.php to check for Windows style \.
 * Fixed file dates to display correctly.
 * Fixed bug update button to go to proper simple or advanced page.
 * Fixed a problem where users could not report bugs if uploading was disabled.
 * Fixed a minor problem in the print_reporters_option_list().
 * Fixed more CSS issues.
 * Fixed file uploads to not allow duplicate files when using DISK.